--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && npx cap copy",
+    "openAndroid": "npx cap open android",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
